--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/amqplib": "^0.5.17",
+    "amqplib": "^0.7.1",
+    "dotenv": "^8.2.0",
     "fastify": "^3.12.0",
     "fastify-cors": "^5.2.0",
     "fastify-plugin": "^3.0.0",
