--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc -p tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsnd --respawn --transpile-only index.ts",
-    "start": "node ./build/index.js"
+    "start": "node ./build/index.js",
+    "compile-schemas": "json2ts -i ./app/workerservice/schemas -o types"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "typescript": "^4.1.5"
   },
   "devDependencies": {
-    "@types/node": "^14.14.30"
+    "@types/node": "^14.14.30",
+    "json-schema-to-typescript": "^10.1.3"
   }
 }
