--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fastify-cors": "^5.2.0",
     "fastify-plugin": "^3.0.0",
     "telegraf": "^4.3.0",
+    "telegraf-inline-menu": "^6.2.1",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.5"
   },
